# src/routes/health.route.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express'
-import { healthCheck } from '../controllers/health.cotroller'
+import { healthCheck } from '../controllers/health.controller'
 
 const router = Router()
 
